injectable/tests/ui/multiple_constructors.stderr
error: #[injectable] requires exactly one #[injectable_ctor] method, but found multiple
 --> tests/ui/multiple_constructors.rs
  |
  |     pub fn from_name(name: String) -> Self {
  |            ^^^^^^^^^
